# customer_support_chatbot

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  docker-compose.yml  plan.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py  worker.py
backend/app/agent/: actions.py  adapter.py  orchestrator.py  prompt.py  provider.py  tools.py
backend/app/api/: deps.py  dev.py  health.py  sse.py
backend/app/core/: config.py  db.py  errors.py  ids.py  logging.py  masking.py  net.py  security.py  validation.py
backend/eval/: __init__.py  assertions.py  config.py  configs.example.yaml  golden_set.yaml  pdf.py  report.py  results.py  run.py
backend/scripts/: approve_canonical.py  chat_repl.py  seed_canonical.py  sweep_locks.py  upload_knowledge.py
backend/tests/: conftest.py  fakes.py  test_health.py  test_logging.py  test_stream.py
backend/tests/agent/: test_adapter.py  test_anthropic_adapter.py  test_provider.py
backend/tests/analytics/: test_labeler.py  test_rules.py  test_summarizer.py
backend/tests/core/: test_config.py  test_config_guard.py  test_errors.py  test_ids.py  test_log_hygiene.py  test_masking.py  test_net.py  test_security.py
backend/tests/delivery/: conftest.py  test_adapters.py  test_delivery_service.py  test_enqueue.py  test_reconcile.py
backend/tests/domain/: conftest.py  test_canonical.py  test_conversation_repo.py  test_settings_repo.py  test_usage_pricing.py  test_usage_repo.py  test_usage_service.py
backend/tests/eval/: conftest.py  test_assertions.py  test_config.py  test_pdf.py  (+4 more)
(+245 files in other folders)
